--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-1ETRMPSK\\SQLEXPRESS;Database=CoffeeOrderingDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CoffeeOrderingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
